Add responsive header layout

--- a/index.html
+++ b/index.html
@@ -27,7 +27,25 @@
   <title>html-css-bootstrap-dashboard</title>
 </head>
 
-<body>
+<body class="debug">
+
+  <!-- Header -->
+  <header id="site_header">
+
+    <div class="container-fluid d-flex align-items-center p-0">
+      <div class="_logo"></div>
+      <div class="_search_bar"></div>
+      <div class="_header_menu"></div>
+    </div>
+
+  </header>
+
+  <!-- Main -->
+  <main id="site_main">
+
+
+
+  </main>
 
 </body>
 
