--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <body class="debug">
 
   <!-- Header -->
-  <header id="site_header">
+  <header id="site_header" class="d-flex justify-content-center align-items-center">
 
-    <div class="container-fluid d-flex align-items-center p-0">
+    <div class="container-fluid d-flex">
       <div class="_logo"></div>
       <div class="_search_bar"></div>
       <div class="_header_menu"></div>
@@ -43,6 +43,38 @@
   <!-- Main -->
   <main id="site_main">
 
+
+    <div class="container-fluid d-flex p-0">
+
+      <div class="col-1">
+        <aside class="_nav_menu"></aside>
+      </div>
+
+      <div class="col-11">
+        <div class="_dashboard">
+
+          <div class="_dashboard_top"></div>
+
+          <div class="_dashboard_body">
+            <div class="container-fluid">
+              <div class="row pt-4 px-1">
+
+                <div class="col-12 col-lg-8">
+                  <div class="card _next_classes mb-4"></div>
+                  <div class="card _faq mb-4"></div>
+                </div>
+
+                <div class="col-12 col-lg-4">
+                  <div class="card _todo mb-4"></div>
+                  <div class="card _analytics mb-4"></div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
   </main>
