Add placeholder links in sidebar menu

--- a/index.html
+++ b/index.html
@@ -46,11 +46,18 @@
 
     <div class="container-fluid d-flex p-0">
 
-      <div class="col-1">
-        <aside class="_nav_menu"></aside>
+      <div class="col-2 col-lg-1">
+        <aside class="_nav_menu _bg_primary d-flex flex-column justify-content-between align-items-center p-2">
+          <ul class="p-0">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Stats</a></li>
+            <li><a href="#">Signals</a></li>
+          </ul>
+          <a href="#">Admin</a>
+        </aside>
       </div>
 
-      <div class="col-11">
+      <div class="col-10 col-lg-11">
         <div class="_dashboard">
 
           <div class="_dashboard_top"></div>
