Add responsive dashboard navigation menu with content

--- a/index.html
+++ b/index.html
@@ -67,12 +67,18 @@
 
       <div class="col-2 col-lg-1">
         <aside class="_nav_menu _bg_primary d-flex flex-column justify-content-between align-items-center p-2">
-          <ul class="p-0">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Stats</a></li>
-            <li><a href="#">Signals</a></li>
+          <ul class="ps-0 m-0 py-3">
+            <li class="pb-3"><a class="d-flex align-items-baseline gap-3" href="#"><i
+                  class="fa-solid fa-house"></i><span class="d-none d-lg-inline">Home</span></a></li>
+            <li class="pb-3"><a class="d-flex align-items-baseline gap-3" href="#"><i
+                  class="fa-solid fa-chart-simple pe-1"></i><span class="d-none d-lg-inline">Stats</span></a>
+            </li>
+            <li class="pb-3"><a class="d-flex align-items-baseline gap-3" href="#"><i
+                  class="fa-solid fa-signal"></i><span class="d-none d-lg-inline">Signals</span></a>
+            </li>
           </ul>
-          <a href="#">Admin</a>
+          <a class="d-flex align-items-baseline gap-3 py-3" href="#"><i class="fa-solid fa-gear"></i><span
+              class="d-none d-lg-inline">Admin</span></a>
         </aside>
       </div>
 
