--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 
   <div class="_app d-flex">
 
+    <!-- Sidebar -->
+
     <div class="_sidebar _bg_primary d-flex flex-column justify-content-between align-items-center p-2">
       <ul class="ps-0 m-0 py-3">
         <li class="pb-3"><a class="d-flex align-items-baseline gap-3 px-3" href="#"><i
@@ -78,11 +80,15 @@
           class="d-none d-lg-inline">Admin</span></a>
     </div>
 
+    <!-- Dashboard -->
+
     <div class="_dashboard">
 
-      <div class="_dashboard_top d-md-flex py-4 ps-3 pe-5 gap-5">
+      <!-- Dashboard top -->
 
-        <div class="_add_new_student pb-3 flex-grow-1 order-last">
+      <div class="_dashboard_top d-md-flex py-4 ps-3 gap-5">
+
+        <div class="_add_new_student pb-3 flex-grow-1 order-last text-lg-center">
           <span>Nuovo Studente</span>
           <button type="button" class="btn btn-outline-light ms-3">
             <i class="fa-solid fa-plus"></i>
@@ -113,18 +119,83 @@
 
       </div>
 
+      <!-- Dashboard body-->
+
       <div class="_dashboard_body">
         <div class="container-fluid">
           <div class="row pt-4 px-1">
 
             <div class="col-12 col-lg-8">
-              <div class="card _next_classes mb-4"></div>
-              <div class="card _faq mb-4"></div>
+
+              <!-- Next classes -->
+              <div class="card _next_classes mb-4">
+                <h4 class="card-header">Prossime classi</h4>
+              </div>
+
+              <!-- FAQ -->
+              <div class="card _faq mb-4">
+                <h4 class="card-header">F.A.Q.</h4>
+
+                <div class="accordion accordion-flush m-3" id="faq">
+
+                  <div class="accordion-item border-0 border-bottom">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        Come aggiungere un nuovo studente?
+                      </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#faq">
+                      <div class="accordion-body">
+                        Clicca sul + in alto nella sezione blu
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="accordion-item border-0 border-bottom">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Come posso accedere alle informazioni sul mio account?
+                      </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faq">
+                      <div class="accordion-body">
+                        Clicca sull'icona della campanella
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="accordion-item border-0">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Posso usare questa dashboard da mobile?
+                      </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#faq">
+                      <div class="accordion-body">
+                        <span>Certo! Mi sono fatto un c**o così per renderla responsive!</span><br>
+                        Certo! la dashboard è responsive per la maggior parte dei dispositivi.
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+
+              </div>
+
             </div>
 
             <div class="col-12 col-lg-4">
-              <div class="card _todo mb-4"></div>
-              <div class="card _analytics mb-4"></div>
+
+              <div class="card _todo mb-4">
+                <h4 class="card-header">Todo</h4>
+              </div>
+
+              <div class="card _analytics mb-4">
+              </div>
+
             </div>
 
           </div>
@@ -134,6 +205,11 @@
     </div>
 
   </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 
 </body>
 
