Add responsive todo card

--- a/index.html
+++ b/index.html
@@ -189,8 +189,29 @@
 
             <div class="col-12 col-lg-4">
 
+
+              <!-- Todo -->
               <div class="card _todo mb-4">
                 <h4 class="card-header">Todo</h4>
+
+                <ul class="list-group m-3">
+                  <li class="list-group-item">
+                    <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckboxStretched">
+                    <label class="form-check-label stretched-link" for="firstCheckboxStretched">Kickoff nuove
+                      classi</label>
+                  </li>
+                  <li class="list-group-item">
+                    <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckboxStretched">
+                    <label class="form-check-label stretched-link" for="secondCheckboxStretched">Lexione su Bootstrap 5
+                      in classe #75</label>
+                  </li>
+                  <li class="list-group-item">
+                    <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckboxStretched">
+                    <label class="form-check-label stretched-link" for="thirdCheckboxStretched">Controllare usernare
+                      github studenti</label>
+                  </li>
+                </ul>
+
               </div>
 
               <div class="card _analytics mb-4">
