--- a/index.html
+++ b/index.html
@@ -189,7 +189,6 @@
 
             <div class="col-12 col-lg-4">
 
-
               <!-- Todo -->
               <div class="card _todo mb-4">
                 <h4 class="card-header">Todo</h4>
@@ -214,8 +213,23 @@
 
               </div>
 
-              <div class="card _analytics mb-4">
+              <!-- Analytics -->
+              <div class="card _analytics">
+                <img src="./assets/img/stats.jpeg" class="card-img-top" alt="">
+                <div class="card-body">
+                  <h5 class="card-title">Utenti attivi</h5>
+                  <p class="card-text">Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Gennaio: 1200</li>
+                  <li class="list-group-item">Febbraio: 800</li>
+                  <li class="list-group-item">Marzo: 1000</li>
+                </ul>
+                <div class="card-body">
+                  <a href="#" class="card-link">Visualizza report approfondito</a>
+                </div>
               </div>
+
 
             </div>
 
