Add responsive next classes card

--- a/index.html
+++ b/index.html
@@ -130,57 +130,239 @@
               <!-- Next classes -->
               <div class="card _next_classes mb-4">
                 <h4 class="card-header">Prossime classi</h4>
+
+                <div class="card-body">
+                  <table class="table table-hover">
+
+                    <thead>
+                      <tr>
+                        <th scope="col">Nome</th>
+                        <th scope="col" class="d-none d-md-table-cell">Data inizio</th>
+                        <th scope="col" class="d-none d-md-table-cell">ROI</th>
+                        <th scope="col">Stato</th>
+                        <th scope="col">Azioni</th>
+                      </tr>
+                    </thead>
+
+                    <tbody>
+
+                      <tr>
+                        <td>
+                          <div class="_icon_bg d-inline-block text-light rounded-circle text-center me-2">
+                            <i class="fa-solid fa-code"></i>
+                          </div>
+                          Classe 75
+                        </td>
+                        <td class="d-none d-md-table-cell">15 Feb 2021</td>
+                        <td class="d-none d-md-table-cell">20%</td>
+                        <td><span class="badge bg-success rounded fw-normal">Done</span></td>
+                        <td class="d-flex gap-2">
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                          </button>
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td>
+                          <div class="_icon_bg d-inline-block text-light rounded-circle text-center me-2">
+                            <i class="fa-solid fa-code"></i>
+                          </div>
+                          Classe 76
+                        </td>
+                        <td class="d-none d-md-table-cell">16 Feb 2021</td>
+                        <td class="d-none d-md-table-cell">20%</td>
+                        <td><span class="badge bg-success rounded fw-normal">Done</span></td>
+                        <td class="d-flex gap-2">
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                          </button>
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td>
+                          <div class="_icon_bg d-inline-block text-light rounded-circle text-center me-2">
+                            <i class="fa-solid fa-code"></i>
+                          </div>
+                          Classe 77
+                        </td>
+                        <td class="d-none d-md-table-cell">17 Feb 2021</td>
+                        <td class="d-none d-md-table-cell">20%</td>
+                        <td><span class="badge bg-warning rounded fw-normal">Process</span></td>
+                        <td class="d-flex gap-2">
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                          </button>
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td>
+                          <div class="_icon_bg d-inline-block text-light rounded-circle text-center me-2">
+                            <i class="fa-solid fa-code"></i>
+                          </div>
+                          Classe 78
+                        </td>
+                        <td class="d-none d-md-table-cell">18 Feb 2021</td>
+                        <td class="d-none d-md-table-cell">20%</td>
+                        <td><span class="badge bg-success rounded fw-normal">Done</span></td>
+                        <td class="d-flex gap-2">
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                          </button>
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td>
+                          <div class="_icon_bg d-inline-block text-light rounded-circle text-center me-2">
+                            <i class="fa-solid fa-code"></i>
+                          </div>
+                          Classe 79
+                        </td>
+                        <td class="d-none d-md-table-cell">19 Feb 2021</td>
+                        <td class="d-none d-md-table-cell">20%</td>
+                        <td><span class="badge bg-danger rounded fw-normal">Failed</span></td>
+                        <td class="d-flex gap-2">
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                          </button>
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td>
+                          <div class="_icon_bg d-inline-block text-light rounded-circle text-center me-2">
+                            <i class="fa-solid fa-code"></i>
+                          </div>
+                          Classe 80
+                        </td>
+                        <td class="d-none d-md-table-cell">12 Feb 2021</td>
+                        <td class="d-none d-md-table-cell">20%</td>
+                        <td><span class="badge bg-success rounded fw-normal">Done</span></td>
+                        <td class="d-flex gap-2">
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                          </button>
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td>
+                          <div class="_icon_bg d-inline-block text-light rounded-circle text-center me-2">
+                            <i class="fa-solid fa-code"></i>
+                          </div>
+                          Classe 81
+                        </td>
+                        <td class="d-none d-md-table-cell">21 Feb 2021</td>
+                        <td class="d-none d-md-table-cell">20%</td>
+                        <td><span class="badge bg-danger rounded fw-normal">Failed</span></td>
+                        <td class="d-flex gap-2">
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                          </button>
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td>
+                          <div class="_icon_bg d-inline-block text-light rounded-circle text-center me-2">
+                            <i class="fa-solid fa-code"></i>
+                          </div>
+                          Classe 82
+                        </td>
+                        <td class="d-none d-md-table-cell">22 Feb 2021</td>
+                        <td class="d-none d-md-table-cell">20%</td>
+                        <td><span class="badge bg-success rounded fw-normal">Done</span></td>
+                        <td class="d-flex gap-2">
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                          </button>
+                          <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                          </button>
+                        </td>
+                      </tr>
+
+                    </tbody>
+                  </table>
+                </div>
+
               </div>
 
               <!-- FAQ -->
               <div class="card _faq mb-4">
                 <h4 class="card-header">F.A.Q.</h4>
 
-                <div class="accordion accordion-flush m-3" id="faq">
+                <div class="card body">
+                  <div class="accordion accordion-flush m-3" id="faq">
 
-                  <div class="accordion-item border-0 border-bottom">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        Come aggiungere un nuovo studente?
-                      </button>
-                    </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#faq">
-                      <div class="accordion-body">
-                        Clicca sul + in alto nella sezione blu
+                    <div class="accordion-item border-0 border-bottom">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                          data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                          Come aggiungere un nuovo studente?
+                        </button>
+                      </h2>
+                      <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#faq">
+                        <div class="accordion-body">
+                          Clicca sul + in alto nella sezione blu
+                        </div>
                       </div>
                     </div>
-                  </div>
 
-                  <div class="accordion-item border-0 border-bottom">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Come posso accedere alle informazioni sul mio account?
-                      </button>
-                    </h2>
-                    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faq">
-                      <div class="accordion-body">
-                        Clicca sull'icona della campanella
+                    <div class="accordion-item border-0 border-bottom">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                          data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                          Come posso accedere alle informazioni sul mio account?
+                        </button>
+                      </h2>
+                      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faq">
+                        <div class="accordion-body">
+                          Clicca sull'icona della campanella
+                        </div>
                       </div>
                     </div>
-                  </div>
 
-                  <div class="accordion-item border-0">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        Posso usare questa dashboard da mobile?
-                      </button>
-                    </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#faq">
-                      <div class="accordion-body">
-                        <span>Certo! Mi sono fatto un c**o così per renderla responsive!</span><br>
-                        Certo! la dashboard è responsive per la maggior parte dei dispositivi.
+                    <div class="accordion-item border-0">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                          data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                          Posso usare questa dashboard da mobile?
+                        </button>
+                      </h2>
+                      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#faq">
+                        <div class="accordion-body">
+                          <span>Certo! Mi sono fatto un c**o così per renderla responsive!</span><br>
+                          Certo! la dashboard è responsive per la maggior parte dei dispositivi.
+                        </div>
                       </div>
                     </div>
-                  </div>
 
+                  </div>
                 </div>
 
               </div>
@@ -193,23 +375,26 @@
               <div class="card _todo mb-4">
                 <h4 class="card-header">Todo</h4>
 
-                <ul class="list-group m-3">
-                  <li class="list-group-item">
-                    <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckboxStretched">
-                    <label class="form-check-label stretched-link" for="firstCheckboxStretched">Kickoff nuove
-                      classi</label>
-                  </li>
-                  <li class="list-group-item">
-                    <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckboxStretched">
-                    <label class="form-check-label stretched-link" for="secondCheckboxStretched">Lexione su Bootstrap 5
-                      in classe #75</label>
-                  </li>
-                  <li class="list-group-item">
-                    <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckboxStretched">
-                    <label class="form-check-label stretched-link" for="thirdCheckboxStretched">Controllare usernare
-                      github studenti</label>
-                  </li>
-                </ul>
+                <div class="card body">
+                  <ul class="list-group m-3">
+                    <li class="list-group-item">
+                      <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckboxStretched">
+                      <label class="form-check-label stretched-link" for="firstCheckboxStretched">Kickoff nuove
+                        classi</label>
+                    </li>
+                    <li class="list-group-item">
+                      <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckboxStretched">
+                      <label class="form-check-label stretched-link" for="secondCheckboxStretched">Lexione su Bootstrap
+                        5
+                        in classe #75</label>
+                    </li>
+                    <li class="list-group-item">
+                      <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckboxStretched">
+                      <label class="form-check-label stretched-link" for="thirdCheckboxStretched">Controllare usernare
+                        github studenti</label>
+                    </li>
+                  </ul>
+                </div>
 
               </div>
 
