--- a/index.html
+++ b/index.html
@@ -66,18 +66,33 @@
     <!-- Sidebar -->
 
     <div class="_sidebar _bg_primary d-flex flex-column justify-content-between align-items-center p-2">
-      <ul class="ps-0 m-0 py-3">
-        <li class="pb-3"><a class="d-flex align-items-baseline gap-3 px-3" href="#"><i
-              class="fa-solid fa-house"></i><span class="d-none d-lg-inline">Home</span></a></li>
-        <li class="pb-3"><a class="d-flex align-items-baseline gap-3 px-3" href="#"><i
-              class="fa-solid fa-chart-simple pe-1"></i><span class="d-none d-lg-inline">Stats</span></a>
+
+      <ul class="m-0 py-3 px-4">
+        <li class="pb-3">
+          <a class="d-flex align-items-baseline gap-3 p-2" href="#">
+            <i class="fa-solid fa-house"></i>
+            <span class="d-none d-lg-inline">Home</span>
+          </a>
         </li>
-        <li class="pb-3"><a class="d-flex align-items-baseline gap-3 px-3" href="#"><i
-              class="fa-solid fa-signal"></i><span class="d-none d-lg-inline">Signals</span></a>
+        <li class="pb-3">
+          <a class="d-flex align-items-baseline gap-3 p-2" href="#">
+            <i class="fa-solid fa-chart-simple pe-1">
+
+            </i><span class="d-none d-lg-inline">Stats</span>
+          </a>
+        </li>
+        <li class="pb-3">
+          <a class="d-flex align-items-baseline gap-3 p-2" href="#">
+            <i class="fa-solid fa-signal"></i>
+            <span class="d-none d-lg-inline">Signals</span></a>
         </li>
       </ul>
-      <a class="d-flex align-items-baseline gap-3 p-3" href="#"><i class="fa-solid fa-gear"></i><span
-          class="d-none d-lg-inline">Admin</span></a>
+
+      <a class="d-flex align-items-baseline gap-3 mb-3 p-2" href="#">
+        <i class="fa-solid fa-gear"></i>
+        <span class="d-none d-lg-inline">Admin</span>
+      </a>
+
     </div>
 
     <!-- Dashboard -->
@@ -90,9 +105,125 @@
 
         <div class="_add_new_student pb-3 flex-grow-1 order-last text-lg-center">
           <span>Nuovo Studente</span>
-          <button type="button" class="btn btn-outline-light ms-3">
+
+          <button type="button" class="btn btn-outline-light ms-3" data-bs-toggle="offcanvas" href="#add_new_student"
+            role="button" aria-controls="add_new_student">
             <i class="fa-solid fa-plus"></i>
           </button>
+
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="add_new_student"
+            aria-labelledby="add_new_studentLabel">
+
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="add_new_studentLabel">Inserisci un nuovo studente</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+
+            <div class="offcanvas-body">
+
+              <form class="row g-3">
+                <div class="col-md-6">
+                  <label for="inputName" class="form-label">Nome</label>
+                  <input type="text" class="form-control" id="inputName" />
+                </div>
+
+                <div class="col-md-6">
+                  <label for="inputSurname" class="form-label">Cognome</label>
+                  <input type="text" class="form-control" id="inputSurname" />
+                </div>
+
+                <div class="col-md-6">
+                  <label for="inputEmail4" class="form-label">Email</label>
+
+                  <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1">@</span>
+                    <input type="email" class="form-control" placeholder="" aria-label="email"
+                      aria-describedby="basic-addon1" />
+                  </div>
+                </div>
+
+                <div class="col-md-6">
+                  <label for="inputPassword" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="inputPassword" />
+                </div>
+
+                <div class="col-12">
+                  <label for="inputAddress" class="form-label">Indirizzo</label>
+                  <input type="text" class="form-control" id="inputAddress" placeholder="" />
+                </div>
+
+                <div class="col-md-6">
+                  <label for="inputCity" class="form-label">Citt&agrave;</label>
+                  <input type="text" class="form-control" id="inputCity" />
+                </div>
+
+                <div class="col-md-4">
+                  <label for="inputState" class="form-label">Stato</label>
+                  <select id="inputState" class="form-select">
+                    <option selected="">Scegli...</option>
+                    <option value="1">Austria</option>
+                    <option value="2">Belgio</option>
+                    <option value="3">Bulgaria</option>
+                    <option value="4">Cipro</option>
+                    <option value="5">Croazia</option>
+                    <option value="6">Danimarca</option>
+                    <option value="7">Estonia</option>
+                    <option value="8">Finlandia</option>
+                    <option value="9">Francia</option>
+                    <option value="10">Germania</option>
+                    <option value="11">Grecia</option>
+                    <option value="12">Irlanda</option>
+                    <option value="13">Italia</option>
+                    <option value="14">Lettonia</option>
+                    <option value="15">Lituania</option>
+                    <option value="16">Lussemburgo</option>
+                    <option value="17">Malta</option>
+                    <option value="18">Paesi Bassi</option>
+                    <option value="19">Polonia</option>
+                    <option value="20">Portogallo</option>
+                    <option value="21">Regno Unito</option>
+                    <option value="22">Repubblica Ceca</option>
+                    <option value="23">Romania</option>
+                    <option value="24">Slovacchia</option>
+                    <option value="25">Spagna</option>
+                    <option value="26">Svezia</option>
+                    <option value="27">Svizzera</option>
+                    <option value="28">Ungheria</option>
+                  </select>
+                </div>
+
+                <div class="col-md-2">
+                  <label for="inputZip" class="form-label">CAP</label>
+                  <input type="text" class="form-control" id="inputZip" />
+                </div>
+
+                <div class="col-12">
+                  <label for="inputEmail4" class="form-label">Foto</label>
+                  <div class="input-group mb-3">
+                    <input type="file" class="form-control" id="inputGroupFile02" />
+                  </div>
+                </div>
+
+                <div class="col-12">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck" />
+                    <label class="form-check-label" for="gridCheck">
+                      Seleziona per proseguire
+                    </label>
+                  </div>
+                </div>
+
+                <div class="col-12">
+                  <button type="submit" class="btn btn-primary">Salva</button>
+                  <button type="reset" class="btn btn-warning">Svuota</button>
+                </div>
+
+              </form>
+
+            </div>
+
+          </div>
+
         </div>
 
         <div class="_plan order-first flex-fill pb-3">
