--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@
 
     <div class="container-fluid d-flex align-items-center">
 
+      <!-- Logo -->
+
       <div class="_logo d-flex align-items-center">
         <img class="d-none d-lg-block img-fluid" src="./assets/img/logo.svg" alt="">
         <img class="_mobile_logo d-lg-none img-fluid" src="./assets/img/mobile-logo.png" alt="">
       </div>
+
+      <!-- Search bar -->
 
       <div class="_search d-flex align-items-center px-4">
         <div class="_search_bar rounded d-flex align-items-center">
@@ -46,14 +50,43 @@
         </div>
       </div>
 
-      <div class="_header_menu">
-        <ul class="d-flex justify-content-evenly p-0 m-0">
-          <li class="d-none d-lg-block px-3"><a href="#"><i class="fa-solid fa-list"></i></a></li>
-          <li class="d-none d-lg-block px-3"><a href="#"><i class="fa-solid fa-circle-question"></i></a></li>
-          <li class="d-none d-lg-block px-3"><a href="#"><i class="fa-solid fa-lg fa-ellipsis-vertical"></i></a></li>
-          <li class="ps-3"><a href="#"><i class="fa-solid fa-bell"></i></a></li>
+      <!-- Navbar -->
+
+      <nav class="navbar navbar-expand-sm navbar-light">
+
+        <ul class="navbar-nav">
+          <li class="nav-item d-none d-lg-block pe-3">
+            <a class="nav-link p-0" href="#" aria-current="page">
+              <i class="fa-solid fa-list"></i>
+            </a>
+          </li>
+          <li class="nav-item d-none d-lg-block px-3">
+            <a class="nav-link p-0" href="#" aria-current="page">
+              <i class="fa-solid fa-circle-question"></i>
+            </a>
+          </li>
+          <li class="nav-item d-none d-lg-block px-3">
+            <a class="nav-link p-0" href="#" aria-current="page">
+              <i class="fa-solid fa-lg fa-ellipsis-vertical"></i>
+            </a>
+          </li>
+
+          <!-- Dropdown -->
+          <li class="nav-item dropdown ps-3">
+            <a class="nav-link p-0" href="#" id="dropdown" data-bs-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">
+              <i class="fa fa-bell text-warning" aria-hidden="true"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdown">
+              <a class="dropdown-item" href="#">Profilo</a>
+              <a class="dropdown-item" href="#">Fatturazione</a>
+              <a class="dropdown-item" href="#">Logout</a>
+            </div>
+          </li>
+
         </ul>
-      </div>
+
+      </nav>
 
     </div>
 
@@ -68,20 +101,20 @@
     <div class="_sidebar _bg_primary d-flex flex-column justify-content-between align-items-center p-2">
 
       <ul class="m-0 py-3 px-4">
-        <li class="pb-3">
+        <li class="pb-2">
           <a class="d-flex align-items-baseline gap-3 p-2" href="#">
             <i class="fa-solid fa-house"></i>
             <span class="d-none d-lg-inline">Home</span>
           </a>
         </li>
-        <li class="pb-3">
+        <li class="pb-2">
           <a class="d-flex align-items-baseline gap-3 p-2" href="#">
             <i class="fa-solid fa-chart-simple pe-1">
 
             </i><span class="d-none d-lg-inline">Stats</span>
           </a>
         </li>
-        <li class="pb-3">
+        <li class="pb-2">
           <a class="d-flex align-items-baseline gap-3 p-2" href="#">
             <i class="fa-solid fa-signal"></i>
             <span class="d-none d-lg-inline">Signals</span></a>
