--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
 
-            <div class="offcanvas-body">
+            <div class="offcanvas-body text-start">
 
               <form class="row g-3">
                 <div class="col-md-6">
